# development-team

./: README.md  main.py  pyproject.toml
dev_team/: .env  README.md  pyproject.toml  test_report.md
dev_team/src/dev_team/: crew.py  main.py
dev_team/src/dev_team/config/: agents.yaml  tasks.yaml
